# EasyLibrary

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  easyMath.doxy  easyParse.doxy  package.bat
cmake/: exampleBuild.cmake  testBuild.cmake
docs/: doc_guide.md  easyMath.doxytag  easyParse.doxytag
example/: CMakeLists.txt  advance.cpp  advanceOverText.out.txt  argParser.cpp  argParser.out.txt  binaryString.out.txt  divideRoundUp.out.txt  extractBits.out.txt  hexString.out.txt  isPowerOfTwo.cpp  nBitMask.out.txt  numString.out.txt  octString.out.txt  overflowUnderFlow.out.txt  overflowUnderflow.cpp  stringConv.cpp  valueBetween.cpp  valueBetween.out.txt
include/easyLib/: version.h
include/easyMathLib/: README.md  easyMath.h
include/easyParseLib/: ArgParser.h  README.md  easyParse.h
res/: compressRelease.py.in
src/easyParseLib/: argParser.cpp  easyParse.cpp
test/: CMakeLists.txt  valueBetween.cpp  valueBetween.out.txt
